# SBITB.09June26

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
config/: secrets.env.example  settings.py
deployment/: .env.docker.example  Dockerfile  docker-compose.yml  init.sql  prometheus.yml
scripts/: daily_reconcile.py  health_check.py
src/brokers/: base.py  zerodha.py
src/data/: cache.py  providers.py  ticker.py  zerodha_provider.py
src/execution/: engine.py  positions.py  router.py
src/market/: greeks.py  strength.py
src/risk/: audit.py  compliance.py  kill_switch.py  manager.py
src/strategy/: base.py
src/ta/: indicators.py  volatility.py
tests/: conftest.py
tests/data/: test_cache.py  test_ticker.py  test_zerodha_provider.py
tests/execution/: conftest.py  test_engine.py  test_positions.py  test_router.py  test_zerodha_adapter.py
tests/market/: test_greeks.py  test_strength.py
tests/risk/: test_audit.py  test_compliance.py  test_kill_switch.py  test_manager.py
tests/ta/: test_indicators.py  test_volatility.py
